--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  	<link href="assets/css/style.css" rel="stylesheet">
+  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   	<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
   	
@@ -25,7 +25,7 @@
 	<div class="col-md-10">
 			<div class="panel panel-default">
 					<div class="panel-heading">
-						<h3 class="panel-title">Add a Train</h3>
+						<h3 class="panel-title">Today's Trains</h3>
 					</div>
 					<div class="panel-body">
 						
@@ -33,11 +33,11 @@
 						<div class="row">
 				<table id="currentEmployees" class="table">
 					<tr>
-						<th id="employeeName"> Train Name</th>
-						<th id="role"> Destination</th>
-						<th id="startDate"> Frequency (min) </th>
-						<th id="monthsWorked"> Next Arrival </th>
-						<th id="monthlyRate"> Minutes Away</th>
+						<th id="trainNames"> Train Names</th>
+						<th id="destinations"> Destination</th>
+						<th id="frequencies"> Frequency (min) </th>
+						<th id="nextArrivals"> Next Arrival </th>
+						<th id="minutesAway"> Minutes Away</th>
 					</tr>
 				</table>
 			</div>
@@ -59,19 +59,19 @@
 						<form role="form">
 						  <div class="form-group">
 						    <label for="text">Train Name</label>
-						    <input type="text" class="form-control" id="nameinput">
+						    <input type="text" class="form-control" id="newTrain">
 						  </div>
 						  <div class="form-group">
 						    <label for="text">Destination</label>
-						    <input type="text" class="form-control" id="roleinput">
+						    <input type="text" class="form-control" id="newDestination">
 						  </div>
 						  <div class="form-group">
 						    <label for="text">First Train Time (military time)</label>
-						    <input placeholder="(HH:mm)" ="time" class="form-control" id="startinput">
+						    <input placeholder="(HH:mm)" ="time" class="form-control" id="newTime">
 						  </div>
 						  <div class="form-group">
 							 <label for="comment">Frequency (min)</label>
-							 <input type="number" class="form-control" id="rateinput"></input>
+							 <input type="number" class="form-control" id="newFrequency"></input>
 						  </div> 
 						  <button type="submit" class="btn btn-default" id="addUser">Submit</button>
 						</form> 
@@ -82,9 +82,9 @@
 	<div class="col-md-2"> </div>
 
 
-	
-	<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-	<script src="assets/javascript/app.js"></script>
+<!-- Scripts	 -->
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
+<script src="assets/javascript/app.js"></script>
 	
 
 
