--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   	<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
+
+  	<!-- Moment.JS -->
+  	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   	
 	<title>Train Times</title>
 
@@ -31,7 +34,7 @@
 						
 						<!-- Sign-up Form (note the various input "types")-->
 						<div class="row">
-				<table id="currentEmployees" class="table">
+				<table id="todaysTrains" class="table">
 					<tr>
 						<th id="trainNames"> Train Names</th>
 						<th id="destinations"> Destination</th>
@@ -66,7 +69,7 @@
 						    <input type="text" class="form-control" id="newDestination">
 						  </div>
 						  <div class="form-group">
-						    <label for="text">First Train Time (military time)</label>
+						    <label for="text">First Train Time (HH:mm - military time)</label>
 						    <input placeholder="(HH:mm)" ="time" class="form-control" id="newTime">
 						  </div>
 						  <div class="form-group">
