frequency math works, yay

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<!-- Add a train time -->
-	<div class="col-md-10">
+	<div class="col-md-10" id="trainData">
 			<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="panel-title">Today's Trains</h3>
