--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						
 						<!-- Sign-up Form (note the various input "types")-->
 						<div class="row">
-				<table id="todaysTrains" class="table">
+				<table class="table">
 					<tr>
 						<th id="trainNames"> Train Names</th>
 						<th id="destinations"> Destination</th>
